--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
 <body>
 
   <div class="page-header">
@@ -106,9 +101,8 @@
     </table>
   </div>
 </body>
-
 </html>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script>
   // https://plnkr.co/edit/lWk6Yd?preview
   // https://bootsnipp.com/snippets/8MPnQ
@@ -117,6 +111,12 @@
   // $(document).ready(function () {
   //   window.print();
   // });
+
+  // margin_page
+  // top:0.07"
+  // right:0.15"
+  // bottom:0.24"
+  // left:0.14"
 </script>
 <style>
   /* Styles go here */
@@ -127,7 +127,6 @@
 
   .page-footer, .page-footer-space {
     height: 90px;
-
   }
 
   .invoice-box {
@@ -190,7 +189,7 @@
     font-weight: bold;
   }
 
-  @media only screen and (max-width: 600px) {
+  /* @media only screen and (max-width: 600px) {
     .invoice-box table tr.top table td {
       width: 100%;
       display: block;
@@ -202,7 +201,7 @@
       display: block;
       text-align: center;
     }
-  }
+  } */
 
   .page-footer {
     position: fixed;
@@ -231,6 +230,10 @@
   @media print {
     thead {display: table-header-group;} 
     tfoot {display: table-footer-group;}
-    body {margin: 0;}
+    body {
+      margin: 0;
+      width: 241.3mm;
+      height: 139.7mm;
+    }
   }
 </style>
